K8s-manifests/02-services-networking/service-nodeport.yaml
# NodePort — exposes the service on a static port (30000-32767) on every node
apiVersion: v1
kind: Service
metadata:
  name: web-app-nodeport
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
